[package]
name = "demo-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "sprite-animate-player"]

[features]
default = ["debug"]

debug = []

[dependencies]
bevy = { version = "0.8" }

# 2d sprite 动画
sprite-animate-player = { path = "./sprite-animate-player" }

# 按键映射
leafwing-input-manager = "0.6.1"

# 状态管理
iyes_loopless = { version = "0.7" }

# 资源加载
bevy_asset_loader = { version = "0.12", features = ["stageless", "2d"] }