[package]
name = "demo-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "sprite-animate-player"]

[features]
default = ["debug"]

debug = ["heron/debug-2d", "heron/default", "bevy-inspector-egui/default"]

prdouct = ["heron/2d", "heron/default"]

[dependencies]
bevy = { version = "0.8" }

# 2d sprite 动画
sprite-animate-player = { path = "./sprite-animate-player" }

# 按键映射
leafwing-input-manager = "0.6.1"

# 状态管理
iyes_loopless = { version = "0.7" }

# 资源加载
bevy_asset_loader = { version = "0.12", features = ["stageless", "2d"] }

# 物理引擎
heron = { version = "4", optional = true }
bevy-inspector-egui = { version = "0.13", optional = true }

 